channges in mik file

--- a/mik.html
+++ b/mik.html
@@ -14,6 +14,8 @@
         <li>notes</li>
         <li>notes1</li>
         <li>notes2</li>
+        <li>notes4</li>
+        <li>notes3</li>
         <li><a href="k.jpg"></a>notesccc3</li>
     </ol>
 </body>
